boulder/boulder/tests/compile_fail/hir/add_types.bo
# Add
# u16
# u32
# (7:

fn wrong_identity(a: u32, b: u16) {
    a + b;
}